--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary btn-block w-25 m-auto" mdbBtn mdbWavesEffect>
+        <button class="btn btn-primary btn-block w-25 m-auto text-capitalize" mdbBtn mdbWavesEffect>
           Login
         </button>
       </div>
