--- a/src/app/boardadmin/board-admin.component.html
+++ b/src/app/boardadmin/board-admin.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid mx-auto pt-5 pb-5">
   <div class="card card-container w-50 m-auto">
-    <div class="card-header text-sm-center custom-blue font-weight-bold">Αναζήτηση χρήστη</div>
+    <div class="card-header text-sm-center custom-blue font-weight-bold">Επεξεργασία ρόλων - αναζήτηση χρήστη</div>
+    <div class="h6 text-center text-primary p-3">Αναζητείστε χρήστη με username ή / και email</div>
     <form name="form" (ngSubmit)="onSubmit()" #f="ngForm" novalidate>
       <!-- username-->
       <div class="form-group row col-12 p-3 justify-content-around w-75 m-auto">
@@ -8,7 +9,7 @@
           <label for="username">username</label></div>
         <div class="col-sm-7">
           <input type="text" class="form-control" name="username" [(ngModel)]="form.username"
-                  #username="ngModel" id="username"/>
+                 #username="ngModel" id="username"/>
         </div>
       </div>
       <!-- email-->
@@ -25,6 +26,35 @@
       </div>
     </form>
 
-
-</div>
+    <div *ngIf="users" style="margin-top: 15px;">
+      <div class="row col-sm-12 w-100 m-auto">
+        <table class="table table-striped table-sm small" id="tableUsers">
+          <thead>
+          <tr>
+            <th class="text-center font-weight-bold">A/A</th>
+            <th class="text-center font-weight-bold">ΟΝΟΜΑ</th>
+            <th class="text-center font-weight-bold">ΕΠΙΘΕΤΟ</th>
+            <th class="text-center font-weight-bold">USERNAME</th>
+            <th class="text-center font-weight-bold">EMAIL</th>
+            <th class="text-center font-weight-bold">ΡΟΛΟΣ</th>
+            <th class="text-center font-weight-bold"></th>
+          </tr>
+          </thead>
+          <tr *ngFor="let user of users; index as i">
+            <td class="text-center font-weight-normal">{{i + 1}}</td>
+            <td class="text-center font-weight-normal">{{user.name}}</td>
+            <td class="text-center font-weight-normal">{{user.lastName}}</td>
+            <td class="text-center font-weight-normal">{{user.username}}</td>
+            <td class="text-center font-weight-normal">{{user.email}}</td>
+            <td class="text-center font-weight-normal">{{user.role}}</td>
+            <td class="text-center">
+              <button class="btn-sm btn-outline-primary m-auto"
+                      [routerLink]="['/edituser']" [queryParams]="{userId : users[i].id}">
+                <i class="fa fa-edit"></i></button>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
