--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -90,7 +90,7 @@
           <input type="file" id="image" (change)="onFileChanged($event)"></div>
       </div>
       <div class="form-group">
-        <button class="btn btn-info btn-block w-25 m-auto">Εγγραφή</button>
+        <button class="btn btn-info btn-block w-25 m-auto text-capitalize">Εγγραφή</button>
       </div>
     </form>
       <div class="alert alert-danger" *ngIf="isSignUpFailed">
