--- a/src/app/boardadmin/board-admin.component.html
+++ b/src/app/boardadmin/board-admin.component.html
@@ -26,7 +26,7 @@
       </div>
     </form>
 
-    <div *ngIf="users" style="margin-top: 15px;">
+    <div *ngIf="users.length>0" style="margin-top: 15px;">
       <div class="row col-sm-12 w-100 m-auto">
         <table class="table table-striped table-sm small" id="tableUsers">
           <thead>
@@ -56,5 +56,6 @@
         </table>
       </div>
     </div>
+    <div *ngIf="message" class="alert-danger">{{message}}</div>
   </div>
 </div>
