--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button class="btn btn-info btn-block w-25 m-auto text-capitalize">Αποθήκευση</button>
+        <button class="btn btn-info btn-block w-25 m-auto text-capitalize px-0">Αποθήκευση</button>
       </div>
     </form>
     <div class="alert alert-danger" *ngIf="editFailed">
