--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,11 +14,8 @@
         <a class="nav-link" routerLink="/movieShows">Προβολές</a>
       </li>
       <li class="nav-item"
-          *ngIf="tokenStorageService.getUserRole()==='ADMIN'||tokenStorageService.getUserRole()==='ADMIN_CS'">
+          *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
         <a class="nav-link" routerLink="/admin">Διαχείριση χρηστών</a>
-      </li>
-      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='USER'">
-        <a class="nav-link" routerLink="/user">Κρατήσεις</a>
       </li>
       <li class="nav-item"
           *ngIf="tokenStorageService.getUserRole()==='ADMIN'||tokenStorageService.getUserRole()==='ADMIN_CS'">
@@ -30,11 +27,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/checkIn">Ελεγχος εισιτηρίου</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/imageUpload">τεστ</a>
-      </li>
     </ul>
-
     <div *ngIf="!tokenStorageService.getToken()" class="nav-item">
       <a class="nav-link" routerLink="/register">Εγγραφή</a>
     </div>
