--- a/src/app/movie-show-edit/movie-show-edit.component.html
+++ b/src/app/movie-show-edit/movie-show-edit.component.html
@@ -30,11 +30,11 @@
           <label for="dateTime" class="pt-2 pb-2">Προβολή</label></div>
         <div class="col-sm-4">
           <input type="text" class="form-control" name="dateTime" id="dateTime"
-                 [ngModel]="movieShow.showDate | date:'dd/MM/yyyy'" required>
+                 [ngModel]="movieShow.showDate | date:'dd/MM/yyyy':'UTC'" required>
         </div>
         <div class="col-sm-4">
           <input type="text" class="form-control" name="time" id="time"
-                 [ngModel]="movieShow.startTime| date:'hh:mm'" required>
+                 [ngModel]="movieShow.startTime| date:'HH:mm':'UTC'" required>
         </div>
       </div>
       <!-- ταινια-->
