--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -7,7 +7,7 @@
           <div class="card-body">
             <h5 class="card-title custom-light-blue">{{movies[i].movieShowsOfMovie[0].roomOfMovieShow.name}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{movies[i].movieShowsOfMovie[0].showDate |date:'dd/MM/yyyy'}}
-             - {{movies[i].movieShowsOfMovie[0].startTime |date:'hh:mm'}}</h6>
+             - {{movies[i].movieShowsOfMovie[0].startTime |date:'HH:mm':'UTC'}}</h6>
             <p class="card-text">Χωρητικότητα : {{movies[i].movieShowsOfMovie[0].roomOfMovieShow.capacity}}</p>
             <p class="card-text">Κρατήσεις : {{movies[i].movieShowsOfMovie[0].showTickets.length}} </p>
             <p class="card-text">Διαθέσιμες θέσεις : {{movies[i].movieShowsOfMovie[0].roomOfMovieShow.capacity-movies[i].movieShowsOfMovie[0].showTickets.length}}</p>
@@ -21,7 +21,7 @@
           <div class="card-body">
             <h5 class="card-title custom-light-blue">{{movies[i+1].movieShowsOfMovie[0].roomOfMovieShow.name}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{movies[i+1].movieShowsOfMovie[0].showDate |date:'dd/MM/yyyy'}}
-              - {{movies[i+1].movieShowsOfMovie[0].startTime |date:'hh:mm'}}</h6>
+              - {{movies[i+1].movieShowsOfMovie[0].startTime |date:'HH:mm':'UTC'}}</h6>
             <p class="card-text">Χωρητικότητα : {{movies[i+1].movieShowsOfMovie[0].roomOfMovieShow.capacity}}</p>
             <p class="card-text">Κρατήσεις : {{movies[i+1].movieShowsOfMovie[0].showTickets.length}}  </p>
             <p class="card-text">Διαθέσιμες θέσεις : {{movies[i+1].movieShowsOfMovie[0].roomOfMovieShow.capacity-movies[i+1].movieShowsOfMovie[0].showTickets.length}}</p>
@@ -35,7 +35,7 @@
           <div class="card-body">
             <h5 class="card-title custom-light-blue">{{movies[i+2].movieShowsOfMovie[0].roomOfMovieShow.name}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{movies[i+2].movieShowsOfMovie[0].showDate |date:'dd/MM/yyyy'}}
-              - {{movies[i+2].movieShowsOfMovie[0].startTime |date:'hh:mm'}}</h6>
+              - {{movies[i+2].movieShowsOfMovie[0].startTime |date:'HH:mm':'UTC'}}</h6>
             <p class="card-text">Χωρητικότητα : {{movies[i+2].movieShowsOfMovie[0].roomOfMovieShow.capacity}}</p>
             <p class="card-text">Κρατήσεις : {{movies[i+2].movieShowsOfMovie[0].showTickets.length}} </p>
             <p class="card-text">Διαθέσιμες θέσεις : {{movies[i+2].movieShowsOfMovie[0].roomOfMovieShow.capacity-movies[i+2].movieShowsOfMovie[0].showTickets.length}}</p>
@@ -49,7 +49,7 @@
         <div class="card-body">
           <h5 class="card-title custom-light-blue">{{movies[i+3].movieShowsOfMovie[0].roomOfMovieShow.name}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">{{movies[i+3].movieShowsOfMovie[0].showDate |date:'dd/MM/yyyy'}}
-            - {{movies[i+3].movieShowsOfMovie[0].startTime |date:'hh:mm'}}</h6>
+            - {{movies[i+3].movieShowsOfMovie[0].startTime |date:'HH:mm':'UTC'}}</h6>
           <p class="card-text">Χωρητικότητα : {{movies[i+3].movieShowsOfMovie[0].roomOfMovieShow.capacity}}</p>
           <p class="card-text">Κρατήσεις : {{movies[i+3].movieShowsOfMovie[0].showTickets.length}}  </p>
           <p class="card-text">Διαθέσιμες θέσεις : {{movies[i+3].movieShowsOfMovie[0].roomOfMovieShow.capacity-movies[i+3].movieShowsOfMovie[0].showTickets.length}}</p>
