--- a/src/app/movie-show-edit/movie-show-edit.component.html
+++ b/src/app/movie-show-edit/movie-show-edit.component.html
@@ -25,16 +25,30 @@
         </div>
       </div>
       <!--ημερομηνία και ώρα-->
+<!--      <div class="form-group row col-12 p-1 justify-content-around">-->
+<!--        <div class="col-sm-4 text-sm-right custom-blue">-->
+<!--          <label for="dateTime" class="pt-2 pb-2">Προβολή</label></div>-->
+<!--        <div class="col-sm-4">-->
+<!--          <input type="text" class="form-control" name="dateTime" id="dateTime"-->
+<!--                 [ngModel]="movieShow.showDate | date:'dd/MM/yyyy':'UTC'" required>-->
+<!--        </div>-->
+<!--        <div class="col-sm-4">-->
+<!--          <input type="text" class="form-control" name="time" id="time"-->
+<!--                 [ngModel]="movieShow.startTime| date:'HH:mm':'UTC'" required>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="form-group row col-12 p-1 justify-content-around">
         <div class="col-sm-4 text-sm-right custom-blue">
-          <label for="dateTime" class="pt-2 pb-2">Προβολή</label></div>
+          <label for="date" class="pt-2 pb-2">Προβολή</label></div>
         <div class="col-sm-4">
-          <input type="text" class="form-control" name="dateTime" id="dateTime"
-                 [ngModel]="movieShow.showDate | date:'dd/MM/yyyy':'UTC'" required>
+          <input type="date" class="form-control" name="date" id="date"
+                 [ngModel]="movieShow.showDate | date:'yyyy-MM-dd'"
+                 (ngModelChange)="movieShow.showDate=$event" required>
         </div>
         <div class="col-sm-4">
-          <input type="text" class="form-control" name="time" id="time"
-                 [ngModel]="movieShow.startTime| date:'HH:mm':'UTC'" required>
+          <input type="time" class="form-control" name="time" id="time"
+                 [ngModel]="movieShow.startTime| date:'HH:mm':'UTC'"
+                 (ngModelChange)="movieShow.startTime=$event" required>
         </div>
       </div>
       <!-- ταινια-->
