--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,14 +14,14 @@
         <a class="nav-link" routerLink="/movieShows">Προβολές</a>
       </li>
       <li class="nav-item"
-          *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
+          *ngIf="tokenStorageService.getUserRole()==='ROLE_ADMIN_CS'">
         <a class="nav-link" routerLink="/admin">Διαχείριση χρηστών</a>
       </li>
       <li class="nav-item"
-          *ngIf="tokenStorageService.getUserRole()==='ADMIN'||tokenStorageService.getUserRole()==='ADMIN_CS'">
+          *ngIf="tokenStorageService.getUserRole()==='ROLE_ADMIN'||tokenStorageService.getUserRole()==='ROLE_ADMIN_CS'">
         <a class="nav-link" routerLink="/management">Διαχείριση Αιθουσών</a>
       </li>
-      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN_CS'">
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ROLE_ADMIN_CS'">
         <a class="nav-link" routerLink="/statistics">Στατιστικά</a>
       </li>
       <li class="nav-item">
