--- a/src/app/movie-show-edit/movie-show-edit.component.html
+++ b/src/app/movie-show-edit/movie-show-edit.component.html
@@ -99,8 +99,8 @@
       </div>
     </form>
     <div class="alert alert-danger" *ngIf="updateFailed">
-      Η επεξεργασία των στοιχείων σας απέτυχε! <br>{{errorMessage}}
+      Η επεξεργασία της προβολής σας απέτυχε! <br>{{errorMessage}}
     </div>
-    <div class="alert alert-success" *ngIf="isSuccessful"> Η επεξεργασία των στοιχείων σας ήταν επιτυχής!</div>
+    <div class="alert alert-success" *ngIf="isSuccessful"> Η επεξεργασία της προβολής ήταν επιτυχής!</div>
   </div>
 </div>
